# Stashpeak-app

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codemagic.yaml  eslint.config.mjs  index.html  msg.txt  package-lock.json  package.json  vitest.config.ts
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  issue-triage.yml  pr-quality-gate.yml  pr-title.yml  release.yml  review-bot.yml  roadmap-sync.yml
docs/: EXTENSIONS_BRAINSTORM.md  EXTENSIONS_SPEC.md  MCP_KB_CONTRACT.md  SYNC_ENGINE.md
docs/superpowers/plans/: 2026-06-25-mcp-kb-foundation.md  2026-06-26-mcp-plan2-security-audit.md  2026-06-26-mcp-plan3-transport-shim.md  2026-06-26-mcp-plan4-frontend-settings.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: mcp_smoke.sh
src-tauri/src/: currency.rs  db.rs  lib.rs  logging.rs  main.rs  notifications.rs  products.rs  providers.rs  secrets.rs  settings.rs  subscriptions.rs  test_support.rs
src-tauri/src/connectors/: descriptor.rs  http.rs  mod.rs  registry.rs
src-tauri/src/connectors/spend/: anthropic.rs  gcp.rs  groq.rs  mod.rs  openai.rs  openrouter.rs
src-tauri/src/kb/: access.rs  commands.rs  ledger.rs  mod.rs  path.rs  read.rs  search.rs  tokens.rs  watch.rs
src-tauri/src/mcp/: commands.rs  config.rs  lifecycle.rs  manifest.rs  mod.rs  server.rs  uri.rs  wire.rs
src-tauri/src/migrations/: 001_initial.sql  002_settings.sql  003_currency_settings.sql  004_provider_enabled.sql  005_subscription_link_overrides.sql  006_subscription_link_pins.sql  007_product_visibility.sql  008_mcp.sql
src/components/: CategorySelector.tsx  DashboardView.tsx  ExchangeRatesSection.tsx  MapView.tsx  McpAccessSection.test.ts  McpAccessSection.tsx  McpAccessSectionContainer.tsx  NotificationSettings.tsx  NotificationSettingsSection.tsx  ProviderCard.tsx  RateRow.tsx  RenewalBanner.tsx  SelectableErrorMessage.tsx  SettingsView.tsx  SpendView.tsx  StashpeakLogo.tsx  StatHero.tsx  SubscriptionForm.tsx  SubscriptionList.tsx  SubscriptionPresets.tsx  SubscriptionsView.tsx  UpdateSection.tsx  WindowControls.tsx  surfaceStyles.ts
src/components/map/: BusEdge.tsx  ProductNode.tsx  ProviderNode.tsx  SubscriptionNode.tsx  types.ts
src/hooks/: useSpendData.ts  useTheme.ts  useUpcomingRenewals.ts
src/lib/: categoryFormatting.ts  connectors.ts  credentials.ts  currencies.ts  mapGraph.test.ts  mapGraph.ts  mapLayout.ts  mapTypes.ts  mcp.test.ts  mcp.ts  products.ts  settings.ts  spendCache.ts  spendProviders.ts  subscriptionMetrics.ts  subscriptionPresets.ts  subscriptions.ts  surfaceStyles.ts  updater.ts
src/lib/__snapshots__/: mapGraph.test.ts.snap
src/lib/api/: products.ts
src/test/: setup.ts
src/views/: contract.test.ts  contract.ts
