[package]
name = "stashpeak"
version = "0.3.0"
description = "A dashboard for your AI ecosystem"
authors = ["Stashpeak"]
edition = "2021"
# Two binaries ship from this crate (the app + the `stashpeak-mcp` shim), so a
# bare `cargo run` (used by `tauri dev`) is ambiguous without this — point it at
# the app binary.
default-run = "stashpeak"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stashpeak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
dirs = "6"
regex = "1.11"
zeroize = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
notify = "8"
unicode-normalization = "0.1"
rand = "0.9"
sha2 = "0.11"
hex = "0.4"
# Cross-platform local IPC (Windows named pipe + Unix domain socket, one API).
# Used by both the lib (mcp::server listener) and the stashpeak-mcp shim (client).
# NOTE: `rmcp` is intentionally NOT added — Plan 3's P1 pre-execution correction makes
# the shim's MCP server a hand-rolled line-delimited JSON-RPC handler (no SDK dep); rmcp
# is deferred to a future optional refactor (resolve its version then).
interprocess = "2"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native-sync-persistent"] }

# The self-updater replaces the app binary in place, which the iOS/Android app
# stores forbid (the OS store owns updates), so it is desktop-only and is not
# built for mobile targets. Its registration in lib.rs is `#[cfg(desktop)]`.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
# Test-only: generate a throwaway RSA key at runtime so the GCP host-side signer
# (RS256 / from_rsa_pem) can be exercised offline WITHOUT committing a private key.
rsa = { version = "0.9", features = ["pem"] }
tempfile = "3"
# NOTE: tauri "test" feature / mock_app() intentionally NOT added here.
# On Windows headless environments, enabling it causes STATUS_ENTRYPOINT_NOT_FOUND
# at test binary startup (Windows UI DLLs added by feature unification can't be
# resolved). Lifecycle tests use start_server_only() instead of mock_app() — the
# IPC server code path is identical; the vault watcher is separately covered by
# notify_changed_gates_excluded_paths.

# The stashpeak-mcp shim: a separate binary the MCP client spawns. It links
# stashpeak_lib (reusing mcp::wire/mcp::uri) and speaks MCP on stdio + the
# length-prefixed IPC to the running app. Built by `cargo build --all-targets`.
[[bin]]
name = "stashpeak-mcp"
path = "src/bin/mcp.rs"
